<resources>
    <string name="app_name">BoxNews</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>

    <string name="nav_header_title">我的板块</string>
    <string name="nav_header_title2">更多板块</string>
    <string name="nav_header_text">Hello</string>

    <string name="page_title">Page_title</string>

    <string name="author">chux123</string>
    <string name="date">2021-05-14 17:12:39</string>
    <string name="title">【討論】國動主播古文大全</string>
    <string name="live_title">滑起來！</string>
    <string name="large_text">
        <p>傳說古代有一名男子前往山上打獵，山上十分寒冷，他發現一隻快凍死的花豹，他不忍心花豹活活凍死，於是他掏出身上的梅子果凍餵食花豹，史稱：「梅果凍，救豹凍」</p>
        <p>注：沒國動，就暴動</p>
        <br></br>
        <p>鼻帝一年，適逢動帝生辰，舉國歡慶，百姓俱製紙燈歡慶，紙燈上鑲金鑲銀，貴且華美。眾百姓將紙燈晾於街上，五彩繽紛、目不暇給，動帝見此景，大樂，拍案大叫「貴紙燈，晾起來」</p>
        <p>注：鬼子燈，亮起來</p>
        <br></br>
        <p>古有一好色之徒名廖特，妻妾成群，荒淫無度，所到之處，眾人皆退避三舍。一日，廖特復納妾，大擺筵席而門可羅雀，惟七乞前而討食，不歡而散。後人言「廖添室，七乞來」，代表一個人做人失敗</p>
        <p>注：聊天室，七起來</p>
        <br></br>
        <p>鴛鴦瓦冷霜華重，翡翠衾寒誰與共? 宋朝文士枕上讀白樂天詩集往往觸物生情。古有云: 宋塌下，去探衾</p>
        <p>注：送他下，去探親</p>
        <br></br>
        <p>昔有猛將郭凍，治軍有方，待部眾如己出，每逢戰事告捷、皆將朝廷所賜銀兩布匹賞諸，未嘗獨享。眾將感之，謂之其「布銀將軍」。後為奸人誣，遭貶為民，其舊部升將軍，因念其德，以銀鑲布為信物，暗邀歸營，仍以將軍之禮之、傳為佳話。後人稱頌，便有云：「布鑲銀，舊部邀營」</p>
        <p>注：不想贏，就不要贏</p>
        <br></br>
        <p>古一宰相被懷疑計劃刺殺皇上，皇上便派人調查，發現宰相於地道藏有一把舊匕首，便遭斬首之，史稱：宰疑刺，舊匕地道底。</p>
        <p>注：再一次，就鼻地到底</p>
        <br></br>
        <p>古有一地名曰葛，擅建築，其石碇聞名天下第一，每每富豪建樓者必慮之，又以名匠薩克之手工為天下第一藝，每逢富人建樓 必言 :【第一碇慮，葛樓薩克】</p>
        <p>注：第一定律，Girl Suck</p>
        <br></br>
        <p>古東有一大海，出航甚危，漁獲未置而船翻，接鄰漁村皆困而窮且少丁，皆稱之惡海，某日一西來水手觀海天之向，得出航平安之訣，觀海面若似圓波動，海向必差，若無則可安心。而此訣人稱「海先機，察圓」，鄰村則有漁獲而繁盛。</p>
        <p>注：海鮮稽，查員</p>
        <br></br>
        <p>古有學子名輪，日夜苦讀一朝中的，科舉榜首。群臣見衣衫襤褸，貌不揚，皆心生藐視之意。丞相淒摡，讀閱其文章心中讚噗，此人有才，必為國之棟樑，力薦之。史稱，「衫藐輪，淒摡大薦」</p>
        <p>注：三秒倫，乞丐大劍</p>
        <br></br>
        <p>有一愛柿者，名華起。而新埔柿多，其柿尤為甜，其民亦以其柿為傲。每次鄉儻聊甜柿時，華起便現，頌柿何甜何美，如晨間之甘露，如初秋之彎月，足足三日有餘，竟不忍去留。爾後鄉間便形成一句佳話:「聊甜柿，華起來。」</p>
        <p>注：聊天室，滑起來</p>
        <br></br>
        <p>昔有男子姓夏，祖輩居於十里之外，嘗於每日晨晚去往叩安，不畏寒暑，猶有二十四孝之風。時人感佩其孝心之盛，讚曰：「夏去探親。」</p>
        <p>注：下去探親</p>
        <br></br>
        <p>昔有一浪人名海先，生性豁達，放蕩不羈，唯特愛絲織布飾。每當浪遊街頭，逢人便乞布飾以冠衣裝，乞得，大喜，立於市內炫耀之，久久不能自己。爾後，街坊見其人影常道：「海先，嗜布飾。」</p>
        <p>注：海鮮，是不是</p>
        <br></br>
        <p>相傳古海南，有島山中二獸金毛獅鷹鴞比鄰相親，曾有高僧遠觀，曰:「此獅乃祥瑞取其顱俸可保運」，王聞其訊，即點兵獵之，取其顱首，爾後比鄰鷹鴞悲鳴盡力一礴入涯，王觀之其曰:「二獸乃管鮑之交也」此話永流傳後人云:「瑞獅斷頭、鷹兒逝去」</p>
        <p>注：瑞斯斷頭，嬰兒死去</p>
        <br></br>
        <p>東漢末年，群雄輩起，有一武人名曰甘寧，因其少時不拘禮數，常于鄉中謾罵而不以為意，後成一吳國名將，征戰無數，逐成一德禮兼備之人，後其卸甲歸田，鄉民們無不以將軍為榮，後人稱:「甘寧老時乃德禮」亦指人因經歷人生風雨沖刷而後成為成熟德禮之人。</p>
        <p>注：幹你老奈德利</p>
        <br></br>
        <p>古有一舉人郭棟，因平時行俠仗義，能公平斷是非，鄰皆美其名，其侄兒聰穎，能力不下其叔。某年天炎，穀收不良，故鬧飢荒，郭棟之侄以鏡反光，入穴捉蝙蝠，以解饑荒。故世人相傳一句：「睿似叔叔，攔光擋飢」</p>
        <p>注：瑞斯叔叔，籃框當機</p>
        <br></br>
        <p>昔有書生郭棟，才高，性好飲，少時習於私塾，常竊飲，趁其醉意觀經，竟得卷外之意。嘗以己意譯之，文思泉湧，下筆如有神，皆屬佳作。爾後郭棟乃任朝廷司書，共譯經五千章有餘。此事於民間傳流傳，並成佳話，是謂「郭棟塾醉卷，譯章五千。」</p>
        <p>注：國動贖罪券，一張五千</p>
        <br></br>
        <p>古有一婦姓芷名惠，性愛鳥，日出販絲，日落返家，常於歸途中，仿鳥鳴而唱，鄉人故謂之：「芷惠，學鴿歌。」</p>
        <p>注：只會，學哥哥</p>
        <br></br>
        <p>鼻帝年間，天下大亂，群雄並起，逐鹿中原。郭棟，字痿航，官拜大將軍，雖好酒及色，卻舞藝高強，有萬夫不當之勇，善統軍，為戰無一不勝。鼻帝六年，圭枸起義，領十萬民兵進逼都城航州，郭棟臨危受命，調兵遣將，欲使夾攻之計，領軍繞行，圍圭枸於城下。行軍之際，未料，遭圭枸埋伏，終困於淮水河畔，足足三日有餘。由於糧草已盡，戰事告急，郭棟乃心生一計，令眾將士皆沉船，破釜甑，燒廬舍，持三日糧，以示士卒必死，無一還心，於是殺出重圍，橫掃敵軍，並斬圭枸於馬下，獲其人頭，班師回朝，獻頭予鼻帝，大悅，乃以美酒相迎，拜郭棟為相，賞千金，封萬戶侯。世人便流傳一段佳話：「郭棟送頭，鼻帝酒迎」形容一個人的成就達到顛峰</p>
        <p>注：國動送頭，鼻地就贏</p>
        <br></br>
        <p>鼻地有一富人史渥，為人樂善好施，常開倉濟貧，街坊皆敬之。一日，其九公子戲於城外，落土壕中，書僮回城呼救，鄰里爭先恐後而至，以碎布縛繩，將史兒拉上，人稱「史渥孩，布勾壕」</p>
        <p>注：是我還，不夠好</p>
        <br></br>
        <p>古有隋煬帝其暴虐無道，國民甚是氣恨，後宇文化及策動叛亂，攻進皇宮，並將其吊死。故傳後世：「國氣，殺吊暴帝。」</p>
        <p>注：過氣，傻屌胞弟</p>
        <br></br>
        <p>古有一農，名郭棟，喜於集椅一日春末驟雨之際，便邀三五好友於舍內賞椅。眾人酣暢大飲，舉杯歡慶農產之豐，雅興之餘，其友不勝酒力，臥躺於棟椅上，仰天嘆賞春露之美，棟笑而曰：「縱友椅天，沃輝沾在時節之巔」</p>
        <p>注：總有一天，我要站在世界之巔</p>
        <br></br>
        <p>古有一人，名章樂，生於泰國，為人正直，德高望重，備受尊敬，泰國國君聽聞此事，讚譽有佳，史稱「泰誇章樂，正德。」</p>
        <p>注：太誇張了，真的</p>
        <br></br>
        <p>古有溪聚蛤，雨時村透氣，村民受擾之，村女計反蛤，飼天敵為抗。史稱「迫蟆於溪」</p>
        <br></br>
        <p>小品拔劍起舞，龜狗亦拔劍起舞，常以身翼蔽動哥，品不得擊</p>
    </string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_home">新闻</string>
    <string name="title_history">历史</string>
    <string name="title_favourite">收藏</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="favorite">favourite</string>
    <string name="content_description_favorite">Put news into favourite list</string>
    <string name="content_description_search">Find something!</string>
    <string name="top_fav_title">收藏</string>
    <string name="detail_top_title">内文</string>
    <string name="top_his_title">历史记录</string>
    <string name="close">close</string>
    <string name="content_description_close">Close now page</string>
    <string name="top_search_title">搜索</string>
    <string name="search_hint">输入关键字搜索</string>
    <string name="search_drawer_title">进阶搜索</string>
    <string name="search_category">分类</string>
    <string name="search_start_date">起始日期</string>
    <string name="search_end_date">结束日期</string>
    <string name="search_keyword">关键字</string>
    <string name="search_fail">找不到结果</string>

    <string-array name="search_categories">
        <item>全部</item>
        <item>娱乐</item>
        <item>军事</item>
        <item>教育</item>
        <item>文化</item>
        <item>健康</item>
        <item>财经</item>
        <item>体育</item>
        <item>汽车</item>
        <item>科技</item>
        <item>社会</item>
    </string-array>
</resources>