<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp">

    <TextView
        android:id="@+id/search_drawer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_drawer_title"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/search_drawer_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/search_drawer_title">

        <TextView
            android:id="@+id/search_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_category"/>

        <Spinner
            android:id="@+id/search_category_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_drawer_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/search_drawer_category">

        <TextView
            android:id="@+id/search_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_start_date"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_drawer_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/search_drawer_start_date">

        <TextView
            android:id="@+id/search_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_end_date"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_drawer_end_date"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
