<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:lines="1"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/item_text"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:ellipsize="end"
                android:lines="3"
                android:text="@string/large_text"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/demo1"
                android:layout_alignParentRight="true"
                android:background="@color/white"
                android:visibility="visible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="·" />

            <TextView
                android:id="@+id/item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>