<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detail_top_bar_layout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/detail_top_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/detail_top_title"
            app:menu="@menu/top_detail_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/detail_top_bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp">

                <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detail_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="·" />

                    <TextView
                        android:id="@+id/detail_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date" />

                </LinearLayout>

                <com.google.android.exoplayer2.ui.PlayerView
                    android:id="@+id/detail_video"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/detail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:ellipsize="end"
                    android:textSize="15sp"
                    android:text="@string/large_text"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/detail_image_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>